force-app/main/default/objects/Marketing_Content__c/Marketing_Content__c.object-meta.xml
<CustomObject>
    <label>Marketing Content</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Marketing Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>