force-app/main/default/objects/Marketing_Content__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Marketing Content</relationshipLabel>
    <relationshipName>Marketing_Content</relationshipName>
    <type>Lookup</type>
</CustomField>