force-app/main/default/objects/Marketing_Content__c/fields/Deal_ID_title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_title__c</fullName>
    <formula>Deal__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID + title</label>
    <type>Text</type>
</CustomField>