force-app/main/default/objects/Marketing_Content__c/fields/Downloadable_Link__c.field-meta.xml
<CustomField>
    <fullName>Downloadable_Link__c</fullName>
    <label>Downloadable Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>