force-app/main/default/objects/Marketing_Content__c/recordTypes/Deal_Specific.recordType-meta.xml
<RecordType>
    <fullName>Deal_Specific</fullName>
    <active>true</active>
    <label>Deal Specific</label>
</RecordType>