force-app/main/default/objects/Marketing_Content__c/recordTypes/General_Content.recordType-meta.xml
<RecordType>
    <fullName>General_Content</fullName>
    <active>true</active>
    <label>General Content</label>
</RecordType>