force-app/main/default/objects/Marketing_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deal_ID_title__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Downloadable_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>