force-app/main/default/objects/Marketing_Content__c/listViews/General_Content_Active.listView-meta.xml
<ListView>
    <fullName>General_Content_Active</fullName>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Downloadable_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Marketing_Content__c.General_Content</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>General Content(Active)</label>
</ListView>